Replace singletonList with List.of for improved readability